# StillSearch

backend/: .gitignore  pyproject.toml
backend/app/: container.py  main.py
backend/app/cloudflare/: client.py  config.py  constants.py  service.py
backend/app/images/: config.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
backend/app/shared/: config.py  database.py  dependencies.py  logging.py
backend/logs/: app.json
frontend/: biome.json  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(user)/: layout.module.css  layout.tsx
frontend/src/app/(user)/upload/: page.tsx
frontend/src/app/@auth/(.)login/: page.tsx
frontend/src/app/@auth/(.)signup/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/icons/: CameraIcon.tsx  EmailIcon.tsx  FolderIcon.tsx  ImageIcon.tsx  InfoIcon.tsx  MenuIcon.tsx  MoreIcon.tsx  PlusIcon.tsx  UserIcon.tsx
frontend/src/components/ui/: Button.module.css  Button.tsx  ButtonLink.tsx  CheckBoxGroup.tsx  Combobox.tsx  Input.module.css  Input.tsx
frontend/src/context/: UserProvider.tsx
frontend/src/features/auth/components/: LoginForm.module.css  LoginForm.tsx  RegisterForm.module.css  RegisterForm.tsx
frontend/src/features/header/components/: Header.module.css  Header.tsx  Nav.tsx  NavAuth.tsx  NavClient.module.css  NavClient.tsx  NavServer.tsx  (+1 more)
frontend/src/hooks/: useAuth.ts
frontend/src/lib/auth/: auth-client.ts  auth.ts
frontend/src/lib/user/: types.ts
(+31 files in other folders)
